--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,25 +1,17 @@
 {
-  "extends": "../tsconfig.json",
   "compilerOptions": {
-    // Environment settings
-    "lib": ["ESNext"],
     "target": "ESNext",
     "module": "ESNext",
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-
-    // Types
-    "types": ["bun-types"],
-
-    // Output settings
     "declaration": true,
     "outDir": "dist",
-    "noEmit": false,
-    "emitDecoratorMetadata": true,
-
-    // Module resolution
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": false
+    "baseUrl": ".",
+    "paths": {
+      "@shared/*": ["../shared/src/*"]
+    },
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
