--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -19,6 +19,6 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.test.ts", "dist"]
+  "include": ["src/index.ts", "src/types/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
