--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,8 @@
     "shared": "workspace:*",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
