--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -17,6 +17,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
 
   },
   "include": ["src"]
