--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ build
 .DS_Store
 .env
 .env.local
+.env.development
+.env.production
 .env.development.local
 .env.test.local
 .env.production.local
