--- a/server/wrangler.toml
+++ b/server/wrangler.toml
@@ -1,6 +1,13 @@
 name = "lbdluxe-api"
 main = "src/index.ts"
 compatibility_date = "2024-12-10"
-
 [observability]
 enabled = true
+# Production domain configuration
+[[routes]]
+pattern = "api.lbdluxe.com/*"
+zone_name = "lbdluxe.com"
+
+# Environment variable bindings
+[vars]
+ENVIRONMENT = "production"
